--- a/app/src/main/res/layout/activity_regis.xml
+++ b/app/src/main/res/layout/activity_regis.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".Login">
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="20dp"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="20dp"
-    tools:context=".Login">
+    android:padding="20dp">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -26,9 +30,7 @@
         android:textAlignment="center"
         android:textSize="30sp"
         android:textStyle="bold" />
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -86,7 +88,5 @@
             android:textStyle="bold" />
     </LinearLayout>
 
-</ScrollView>
-
-
 </LinearLayout>
+</ScrollView>
