--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
         android:textSize="30sp"
         android:textStyle="bold"
         app:drawableTint="#F8F8F8"
-        app:drawableLeftCompat="@drawable/buuk" />
+        app:drawableLeftCompat="@drawable/buku" />
 
 </LinearLayout>
 
